# Playwright-Async-Crawler-Suite

./: .gitignore  README.md  README_EN.md  pyproject.toml  requirements.txt  setup.py
.hypothesis/constants/: 010c7d28cef5e1aa  21a0d9d8029d96bb  7b46b696be63384b  7ed6181d32eaf4a1  de3e5aa93a79d002  f041d62731b29784
config/: __init__.py  config.yaml  stealth.min.js  user_agents.txt
core/: __init__.py  base_spider.py  browser.py  middleware.py
examples/: example_ingredient.py  example_instruction.py
spiders/: __init__.py  ingredient_spider.py  instruction_spider.py
tests/: test_base_spider.py  test_browser_manager.py  test_config.py  test_middleware.py  test_project_structure.py
utils/: __init__.py  cleaner.py  ocr.py
